--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <div class="second-section-container">
                     <h2 class="second-section-header">Форма заказа билета в будущее</h2>
                     <form action="#" class="second-section-form">
-                        <input type="text" name="name" placeholder="Имя" required>
-                        <input type="email" name="email" placeholder="E-mail" required>
-                        <input type="tel" name="phone" placeholder="Телефон" required>
-                        <input type="text" name="plans" placeholder="Куда я полечу в ближайщее время?" required>
+                        <input type="text" name="name" placeholder="Имя" required class="second-section-form-input">
+                        <input type="email" name="email" placeholder="E-mail" required class="second-section-form-input">
+                        <input type="tel" name="phone" placeholder="Телефон" required class="second-section-form-input">
+                        <input type="text" name="plans" placeholder="Куда я полечу в ближайщее время?" required class="second-section-form-input">
                         <button type="submit" class="header-dream-button form-button-submit">Двигаться к мечте</button>
                     </form>
                 </div>
