--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     
     <!-- Footer -->
     <footer>
-        <div class="credits">
-            <p>© Все мои мечты защищены моим трудолюбием</p>
+        <div>
+            <p class="credits">© Все мои мечты защищены моим трудолюбием</p>
         </div>
     </footer>
 </body>
